--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <h1>my check option</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, laborum.</p>
 </body>
 
 </html>
